--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Portfólio</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="imagens/dev2.jpg" alt="tela de desenvolvimento">
+            </div>
+            <div class="banner">
+                <h1>Web Developer & Front-End Designer</h1>
+                <p>Hiago Leite</p>
+                <button>Saiba mais</button>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
